fix: change hover on mobile to click

--- a/src/assets/components/premium-model/premium-model.scss
+++ b/src/assets/components/premium-model/premium-model.scss
@@ -20,6 +20,9 @@
   &__switches {
     flex-direction: column;
     gap: 17px;
+    @media (max-width: 991.98px) {
+        gap: 10px;
+    }
 
     .switch {
       width: fit-content;
