--- a/src/assets/components/switches/switches.scss
+++ b/src/assets/components/switches/switches.scss
@@ -12,6 +12,9 @@
   border: 1px solid $main-color;
   border-radius: 20px;
   transition: ease-in-out 0.3s;
+  @media (max-width: 991.98px) {
+    font-size: 14px;
+  }
 
   &:hover {
     background: $main-color;
